# brasstacks

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  valgrind.sh
brasstacks/: CMakeLists.txt
brasstacks/brasstacks/: CMakeLists.txt  brasstacks.hpp  pch.hpp
brasstacks/brasstacks/assets/libraries/: MeshLibrary.cpp  MeshLibrary.hpp  TextureLibrary.cpp  TextureLibrary.hpp
brasstacks/brasstacks/assets/meshes/: CubeMesh.hpp  Mesh.cpp  Mesh.hpp  PlaneMesh.hpp  Vertex.hpp
brasstacks/brasstacks/assets/textures/: Texture.cpp  Texture.hpp
brasstacks/brasstacks/config/: RenderConfig.cpp  RenderConfig.hpp
brasstacks/brasstacks/core/: Application.cpp  Application.hpp  Renderer.cpp  Renderer.hpp  TargetWindow.cpp
brasstacks/brasstacks/core/state/: AppStateMenu.cpp  AppStateMenu.hpp  AppStatePause.cpp  AppStatePause.hpp  AppStatePlay.cpp
brasstacks/brasstacks/events/: EventBase.hpp  keyboard_events.hpp  mouse_events.hpp
brasstacks/brasstacks/math/: Vec2.cpp  Vec3.hpp  Vec4.cpp  math.cpp
brasstacks/brasstacks/platform/imgui/: UIOverlay.cpp  UIOverlay.hpp
brasstacks/brasstacks/platform/input/: GLFWToBTXKeys.cpp
brasstacks/brasstacks/platform/vulkan/: vkDebugger.cpp  vkDebugger.hpp  vkInstance.cpp  vkInstance.hpp  vmaAllocator.cpp  vmaAllocator.hpp
brasstacks/brasstacks/platform/x11/: X11TargetWindow.hpp  X11ToBTXKeys.hpp
brasstacks/brasstacks/tools/: ConsoleLog.hpp  MemTracker.cpp  TimeKeeper.cpp
brasstacks/brasstacks/tools/cameras/: CameraController.cpp  CameraController.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
brasstacks/cmake/: Findfreetype.cmake  Findglm.cmake  Findspdlog.cmake
brasstacks/include/brasstacks/: brasstacks.hpp  pch.hpp
brasstacks/include/brasstacks/Application/: Application.hpp  ConfigWindow.hpp  EntryPoint.hpp  TargetWindow.hpp
brasstacks/include/brasstacks/AssetLibraries/: MeshLibrary.hpp  ShaderLibrary.hpp  TextureLibrary.hpp
brasstacks/include/brasstacks/Cameras/: Camera.hpp  CameraBag.hpp  PerspectiveCamera.hpp
brasstacks/include/brasstacks/ECS/: Component.hpp  ComponentArray.hpp  ComponentPool.hpp  ComponentRegistrar.hpp  ECS.hpp  ECSIter.hpp  ECSView.hpp  Entity.hpp  EntityRegistrar.hpp  Scene.hpp
brasstacks/include/brasstacks/Engine/: Engine.hpp  Layer.hpp  LayerStack.hpp  RenderConfig.hpp  RenderContext.hpp  RenderQueue.hpp  TargetWindow.hpp
brasstacks/include/brasstacks/Events/: Event.hpp  EventListener.hpp  EventPublisher.hpp  KeyboardEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
brasstacks/include/brasstacks/Meshes/: IndexBuffer.hpp  Mesh.hpp  MeshFlatColor.hpp  MeshFlatTexture.hpp  MeshLitTexture.hpp  MeshScreenLog.hpp  VertexBuffer.hpp  VertexLayout.hpp
brasstacks/include/brasstacks/Shaders/: Shader.hpp  ShaderFlatColor.hpp  ShaderFlatTexture.hpp  ShaderLitTexture.hpp  ShaderScreenLog.hpp
brasstacks/include/brasstacks/System/: Clock.hpp  Profiler.hpp  glm.hpp  pch.hpp
brasstacks/include/brasstacks/Textures/: Texture2D.hpp
brasstacks/include/brasstacks/Utility/: EnumRange.hpp  Logger.hpp  ScreenLog.hpp  config_constants.hpp  math.hpp  memtracker.hpp
brasstacks/include/brasstacks/config/: RenderConfig.hpp
brasstacks/include/brasstacks/core/: Application.hpp  Renderer.hpp  Simulation.hpp  TargetWindow.hpp
brasstacks/include/brasstacks/events/: EventBus.hpp  EventQueue.hpp  keyboard_events.hpp  menu_events.hpp  mouse_events.hpp  (+4 more)
brasstacks/src/: version.hpp.in
brasstacks/src/Application/: Application.cpp  ConfigWindow.cpp  TargetWindow.cpp
brasstacks/src/AssetLibraries/: MeshLibrary.cpp  ShaderLibrary.cpp  TextureLibrary.cpp
brasstacks/src/Cameras/: CameraBag.cpp  PerspectiveCamera.cpp
brasstacks/src/ECS/: Component.cpp  ComponentPool.cpp  ComponentRegistrar.cpp  ECS.cpp  ECSIter.cpp  Entity.cpp  EntityRegistrar.cpp  TransformSystem.cpp
brasstacks/src/Engine/: Engine.cpp  LayerStack.cpp  RenderConfig.cpp  RenderContext.cpp  RenderQueue.cpp  TargetWindow.cpp
brasstacks/src/Events/: EventPublisher.cpp  KeyboardEvent.cpp  MouseEvent.cpp  WindowEvent.cpp
brasstacks/src/Meshes/: IndexBuffer.cpp  MeshFlatColor.cpp  MeshFlatTexture.cpp  MeshLitTexture.cpp  MeshScreenLog.cpp  VertexBuffer.cpp  VertexLayout.cpp
brasstacks/src/Shaders/: Shader.cpp  ShaderFlatColor.cpp  ShaderFlatTexture.cpp  ShaderLitTexture.cpp  ShaderScreenLog.cpp
brasstacks/src/System/: Clock.cpp  Profiler.cpp  main.cpp
brasstacks/src/Textures/: Texture2D.cpp
brasstacks/src/Utility/: Logger.cpp  ScreenLog.cpp
brasstacks/src/config/: RenderConfig.cpp
brasstacks/src/core/: Application.cpp  Renderer.cpp  Simulation.cpp  TargetWindow.cpp
brasstacks/src/events/: EventBus.cpp  state_events.cpp
brasstacks/src/math/: Vec3.cpp
brasstacks/src/passes/: ColorDepthPass.cpp
brasstacks/src/platform/: ImGuiContext.cpp
brasstacks/src/tools/: ConsoleLog.cpp  MemTracker.cpp  TimeKeeper.cpp
btx/: CMakeLists.txt
btx/cmake/: BuildImGUI.cmake  CheckCompilerVersions.cmake  FetchDeps.cmake  fetch_fmtlib.cmake  fetch_glfw.cmake  fetch_glm.cmake  fetch_spdlog.cmake  fetch_vma.cmake
btx/include/brasstacks/: brasstacks.hpp  core.hpp  pch.hpp
btx/src/: CMakeLists.txt  version.hpp.in
btx/src/config/: RenderConfig.cpp
btx/src/core/: Application.cpp  ApplicationState.cpp  Renderer.cpp  Simulation.cpp  TargetWindow.cpp
btx/src/events/: EventBroker.cpp  EventBus.cpp
btx/src/math/: Mat4.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  math.cpp
btx/src/renderer/: Renderer.cpp
btx/src/rendering/: RenderPass.cpp  Renderer.cpp
btx/src/system/: Application.cpp  DebugOverlay.cpp  GUIOverlay.cpp  GraphicsAPI.cpp  TargetWindow.cpp  UILayer.cpp
btx/src/tools/: ConsoleLog.cpp  FPSCamera.cpp  TimeKeeper.cpp  Timekeeper.cpp  VkDebugger.cpp
demo/: CMakeLists.txt  Demo.cpp  Demo.hpp  main.cpp
demo/assets/shaders/: demo.frag  demo.vert
demo/cmake/: CompileShaders.cmake
demo/include/: CameraSystem.hpp  CubeSystem.hpp  cCube.hpp
demo/src/: CameraSystem.cpp  CubeSystem.cpp  add_camera.cpp  add_cube.cpp  add_terrain.cpp  demo.cpp  load_resources.cpp
unit_tests/: CMakeLists.txt  ConsoleLog_test.cpp
(+461 files in other folders)
