set(TARGET_NAME ConsoleLog_test)

add_executable(${TARGET_NAME} EXCLUDE_FROM_ALL)

target_sources(
	${TARGET_NAME} PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_NAME}.cpp"
)

target_link_libraries(
    ${TARGET_NAME} PRIVATE
    brasstacks
)

set_target_properties(
	${TARGET_NAME} PROPERTIES
	CXX_STANDARD 20
	CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF

	RUNTIME_OUTPUT_DIRECTORY_DEBUG   "${CMAKE_SOURCE_DIR}/debug/bin"
	RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/release/bin"
)
